fix: border spacing

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -40,8 +40,12 @@ body {
 }
 
 main {
-  min-height: 100dvh !important;
+  min-height: 100svh !important;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .hidden { display: none!important; }
@@ -278,7 +282,7 @@ blockquote small {
   color: var(--color-fade);
 }
 
-main, .center-box-container {
+.center-box-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -406,8 +410,8 @@ h1.super {
   background:transparent;
   width: 95%;
   height: 95%;
-  max-height: 95svh;
   max-width: 95svw;
+  max-height: 95svh;
   padding: 2rem;
 
   display: flex;
@@ -432,7 +436,7 @@ h1.super {
   width: 100%;
   height: 100%;
   max-height: 95svh;
-  max-width:: 95svw;
+  max-width: 95svw;
   top: 0;
   left: 0;
   border-bottom-left-radius: 205px 7px;
@@ -466,8 +470,8 @@ h1.super {
 @media screen and (max-width: 500px) {
   .border {
     padding: 0;
-    min-width: 95dvw;
-    min-height: 95dvh;
+    width: 95svw;
+    height: 95svh;
   }
   br.soft {
     display: none;
